# skill-server-me

./: .env.example  .gitignore  README.md  Skill Server 技术方案  v1.md
.trae/specs/deployment/: README.md  checklist.md  spec.md  tasks.md
.trae/specs/fix-code-review-issues/: checklist.md  spec.md  tasks.md
backend/: .coverage  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: auth_routes.py  favorite_routes.py  notification_routes.py  repo_routes.py  search_routes.py  skill_routes.py  timeline_routes.py  version_routes.py
backend/app/auth/: dependencies.py  jwt_service.py  permissions.py
backend/app/core/: __init__.py  config.py  encryption.py  exceptions.py  utils.py
backend/app/db/: __init__.py  database.py  init_db.py  migrate_add_stats.py  models.py
backend/app/services/: favorite_service.py  git_sync_service.py  notification_service.py  preview_service.py  search_service.py  skill_service.py  timeline_service.py  version_service.py
backend/data/db/: skills_hub.db
backend/tests/: test_api_all.py  test_full_flow.py  test_full_flow_service.py  test_real_skills.py
backend/tests/auth/: test_jwt_service.py
backend/tests/services/: test_functional_skill_test.py  test_git_sync_service.py  test_skill_service.py
deploy/: docker-compose.yml
doc/: Git认证信息加密存储功能说明.md  代码评审报告.md  项目完整度报告.md  项目差距分析与下一步路线图.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/coverage/: index.html
frontend/coverage/src/: App.vue.html  auto-imports.d.ts.html  components.d.ts.html  index.html  vite-env.d.ts.html
frontend/src/: App.vue  components.d.ts  main.ts  vite-env.d.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: main.scss
frontend/src/utils/: api.ts
(+36 files in other folders)
