[project]
name = "skills-hub"
version = "1.0.0"
description = "Skills Hub Platform - 私有化部署的技能管理平台"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Skills Hub Team"}
]
keywords = ["skills", "management", "git", "search"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "httpx-oauth>=0.13.0",
    "gitpython>=3.1.41",
    "dulwich>=0.21.7",
    "whoosh-reloaded>=2.7.5",
    "jieba>=0.42.1",
    "numpy>=1.26.3",
    "apscheduler>=3.10.4",
    "markdown-it-py>=3.0.0",
    "pygments>=2.17.2",
    "python-frontmatter>=1.1.0",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

nlp = [
    "torch>=2.0.0",
    "sentence-transformers>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
